# hog_keyboard

./: CMakeLists.txt  README.md  README.rst  prj.conf
inc/: ascii2hid.h  buttons.h  hid.h  hog.h
src/: ascii2hid.c  buttons.c  hog.c  main.c
